# zshort

./: .gitignore  README.md  pyproject.toml  run.py
zshort/: __init__.py  settings.py  util.py
zshort/api/models/: auth.py  requests.py  responses.py
zshort/api/v1/: __init__.py  auth.py  invites.py  shorts.py
zshort/auth/: oauth.py
zshort/db/: __init__.py  models.py
